--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="divBackground">
   <h1 class="letraGrande">  {{ title }}</h1>
   <hr>
-  <!-- <app-counter></app-counter> -->
+  <app-counter></app-counter>
   <app-heroes-hero></app-heroes-hero>
   <app-heroes-list></app-heroes-list>
 </div>
